--- a/src/index.html
+++ b/src/index.html
@@ -80,13 +80,13 @@
 
         <div class=" flex flex-col md:flex-row gap-10">
             <a href="#"
-                class="w-full rounded-xl bg-emerald-600 hover:scale-95 transition-all delay-75 h-[400px] bg-cover overflow-hidden"
+                class="w-full rounded-xl bg-emerald-600 hover:scale-95 transition-all delay-75 h-[400px] bg-cover bg-left md:bg-center overflow-hidden"
                 style="background-image: url(images/album.jpg);">
                 <h1></h1>
             </a>
 
             <a href="#"
-                class="w-full rounded-xl bg-zinc-800 hover:scale-95 transition-all delay-75 h-[400px] bg-cover overflow-hidden"
+                class="w-full rounded-xl bg-zinc-800 hover:scale-95 transition-all delay-75 h-[400px] bg-cover bg-right md:bg-center overflow-hidden"
                 style="background-image: url(images/about.jpg);">
                 <h1></h1>
             </a>
